[package]
name = "super-slab"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "super-slab-X.Y.Z" git tag
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/super-slab"
homepage = "https://github.com/BruceBrown/super-slab"
documentation = "https://docs.rs/super-slab"
description = "Pre-allocated storage for a uniform data type, based upon slab"
keywords = ["slab", "allocator"]
categories = ["memory-management", "data-structures"]
exclude = ["/ci/*", "/bors.toml"]

[dependencies]
slab = "0.4"
